fix: prevent book item toolbar overlap with book info lines

--- a/client/src/module/bookmarks/component/BookItem/BookItem.scss
+++ b/client/src/module/bookmarks/component/BookItem/BookItem.scss
@@ -101,6 +101,12 @@
   }
 }
 
+@media (max-width: 600px) {
+  .book-info {
+    padding-bottom: 40px;
+  }
+}
+
 .book-info-text {
   margin: 0;
   font-size: 16px;
